old notif tonerovka

--- a/dodelay_formu.html
+++ b/dodelay_formu.html
@@ -33,13 +33,13 @@
 					<div class="notifList">
 						<ul class="notifListUL">
 							<li>
-								<div class="notifNote">
+								<div class="notifNote newNotif">
     								<img src="images/666.jpg" alt="" class="notifAvatar">
     								<span class="notifHead"><пользователь> поставил Лайк/Дизлайк на ваш комментарий под фильмом <фильм></span>
     							</div>
     						</li>
     						<li>
-								<div class="notifNote">
+								<div class="notifNote newNotif">
     								<img src="images/666.jpg" alt="" class="notifAvatar">
     								<span class="notifHead"><пользователь> поставил Лайк/Дизлайк на ваш комментарий под фильмом <фильм></span>
     							</div>
