--- a/dodelay_formu.html
+++ b/dodelay_formu.html
@@ -35,7 +35,7 @@
 							<li>
 								<div class="notifNote newNotif">
     								<img src="images/666.jpg" alt="" class="notifAvatar">
-    								<span class="notifHead"><пользователь> поставил Лайк/Дизлайк на ваш комментарий под фильмом <фильм></span>
+    								<span class="notifHead"><span><пользователь></span> поставил Лайк/Дизлайк на ваш комментарий под фильмом <span><фильм></span></span>
     							</div>
     						</li>
     						<li>
