--- a/dodelay_formu.html
+++ b/dodelay_formu.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" href="css/slick.css">
 	<link rel="stylesheet" href="css/slick-theme.css">
 	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/jquery.toast.css">
 	<link href="https://fonts.googleapis.com/css2?family=Mina:wght@400;700&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
@@ -128,7 +129,7 @@
 		<div class="user_info">
 
 			<div class="user_img">
-				<img src="images/666.jpg" alt="" class="user_info_img">
+				<img src="images/666.jpg" alt="" class="user_info_img" onclick="errorMes('Anton gay', 'Error', 'error')">
 			</div>
 			
 			<form method="POST" class="user_info_text" enctype="multipart/form-data">
@@ -270,6 +271,7 @@ Change:
 	</footer>
 	<script src="js/jquery-3.3.1.min.js"></script>
 	<script src="js/jquery.raty.js"></script>
+	<script src="js/jquery.toast.js"></script>
 	<script src="js/slick.js"></script>
 	<script src="js/script.js"></script>
     <script>
