--- a/film.html
+++ b/film.html
@@ -117,6 +117,9 @@
 
 		<div class="all_reviews">
 			<h2 class="all_reviews_title">Все отзывы:</h2>
+			<div class="none">
+				<p>Здесь пусто!</p>
+			</div>
 			<div class="review_content">
 				<div class="review review_bad">
 					<div class="review_head">
