--- a/index.html
+++ b/index.html
@@ -340,6 +340,9 @@
 
 				<div class="slider film-pages">
 					<div class="films_container">
+						<div class="none">
+				<p>Здесь пусто!</p>
+			</div>
 						<div class="main_film">
 							<div class="main_film_title">
 								<span>Однажды в... Голливуде (2019)</span>
